<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="176dp"
            android:layout_height="55dp"
            android:text="@string/lista_seriali"
            android:textSize="34sp" />

        <LinearLayout
            android:id="@+id/serial_mando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageMando"
                android:layout_width="100dp"
                android:layout_height="110dp"
                app:srcCompat="@drawable/mando" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/mando_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/przejdz_do_szczeg_w" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tu_wpisz_swoj_ocene" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/ocena_mando"
                        android:layout_width="195dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/ocena" />

                    <Button
                        android:id="@+id/button_ocena_mando"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Akceptuje" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/serial_loki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageLoki"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/loki" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/loki_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/przejdz_do_szczeg_w" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tu_wpisz_swoj_ocene" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/ocena_loki"
                        android:layout_width="195dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/ocena" />

                    <Button
                        android:id="@+id/button_ocena_loki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Akceptuje" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/serial_domZpapieru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageDomZPapieru"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/domzpapieru" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/domZpapieru_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/przejdz_do_szczeg_w" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tu_wpisz_swoj_ocene" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/ocena_domZpapieru"
                        android:layout_width="195dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/ocena" />

                    <Button
                        android:id="@+id/button_ocena_domZpapieru"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Akceptuje"
                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>